# selbstaufsicht

./: .flake8  .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci_job.yml
scripts/: .test_downstream.py.swp  .xgboost_downstream.py.swp  analyze_downstream_cv.py  eval_downstream_cv.py  eval_hparam_search.py  eval_xgboost_downstream_cv.py  explore.py  explore_coconet.py  gen_sh_grid.py  gen_sh_hparam_search.py  infer_upstream.py  infer_xgboost_downstream.py  jigsaw_euclid_emb_3.pt  maximize_diversity.py  output.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  parse_hparam_search.py  pred_challenge.py  rfam_full.py  run_sh_hparam_search.py  sample_submission4.csv  sample_submission4_boot_2.csv  script.py  start_sh_grid.py  test_downstream.py  test_xgboost_downstream.py  train.py  train_contrastive.py  train_downstream.py  train_inpainting.py  train_jigsaw.py  xgboost_downstream.py  xgboost_hparam_search.py
scripts/MSA/: convert.py  databases.txt  readme.txt
scripts/figures/: 3ndb_preds.npy  3ndb_preds_3D.npy  3ndb_preds_frozen.npy  3ndb_target.npy  3ndb_target_3D.npy  plot_contact_map.py  plot_topL_over_k.py
selbstaufsicht/: __init__.py  transforms.py  utils.py
selbstaufsicht/datasets/: __init__.py  _utils.py  challenge.py  challenge_label.py  coconet.py  combined.py  dummy.py  inference.py  kfold_cv_downstream.py  (+6 more)
tests/: conftest.py  test_attention.py  test_differentiable_functions.py  test_diversity_maximization.py  test_layernorm.py  test_metrics.py  test_preprocessing.py  test_task_heads.py  test_xgb.py
(+1461 files in other folders)
