[metadata]
name = selbstaufsicht
description = Self-Supervised Learning for Applications in Bioinformatics.
author = Oskar Taubert
author-email = oskar.taubert@kit.edu
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python

[options]
zip_safe = False
packages=find:
include_package_data = True
package_dir =
    =.
install_requires =
    torch >= 1.10
    torchvision
    tqdm
    biopython
    axial_attention #get rid of this and replace with optimized custom stuff
    pytorch-lightning 
    lightning-bolts
    deepspeed
    cvxpy

[options.packages.find]
[options.extras_require]
testing =
    pytest
    pytest-cov

[test]
extras = True

[tool.pytest]
addopts =
    --cov selbstaufsicht --cov-report term-missing
    --verbose
testpaths = tests
